# bench_audit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  reproduce.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_adapter.yml  new_probe.yml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  FAQ.md  architecture.md  maintainer-outreach.md  published_numbers.json  reproducibility.md  safety-context.md
docs/probes/: index.md  p1_gold_answer_leak.md  p4_harness_injection.md  p5_reward_hacking.md
fixtures/gaia/mini/: README.md  tasks.jsonl
fixtures/swebench_verified/mini/: README.md  tasks.jsonl
fixtures/trajectories/: README.md  labels_schema.json  rubric.md
fixtures/trajectories/mini/: trajectories.jsonl
fixtures/webarena/mini/: README.md  tasks.jsonl
paper/: README.md  main.tex  refs.bib
scripts/: compute_corpus_index.py  diff_against_published.py
src/: config.py  errors.py
src/adapters/: base.py  webarena.py
src/bench_audit/: __init__.py  cli.py  diagnostics.py  schemas.py
src/bench_audit/adapters/: __init__.py  gaia.py  swebench_verified.py
src/bench_audit/harness/: __init__.py  inspect_bridge.py  live.py  model_factory.py  static.py
src/bench_audit/probes/: __init__.py  base.py  eval_set_visibility.py  gold_answer_leak.py  harness_injection.py  reward_hacking.py
src/bench_audit/probes/signatures/: diff_signatures.py  llm_classifier.py
src/bench_audit/reporting/: json_report.py  markdown_report.py  pdf_report.py
src/bench_audit/stats/: __init__.py  agreement.py  intervals.py
src/bench_audit/templates/: report_card.html.j2  report_card.md.j2
src/bench_audit/templates/leaderboard/: benchmark.html.j2  index.html.j2  leaderboard.css.j2  probe.html.j2
src/probes/: hello.py  near_dup_pretraining.py
src/probes/signatures/: __init__.py
src/reporting/: __init__.py  leaderboard.py
tests/: conftest.py
tests/integration/: test_adapter_gaia.py  test_adapter_swebench.py  test_adapter_webarena.py  test_e2e.py
tests/unit/: test_adapter_task_iter_contract.py  test_agreement.py  test_diagnostics.py  test_encoding_roundtrip.py  test_hello_probe.py  test_intervals.py  test_leaderboard.py  test_llm_classifier_prompt.py  test_model_factory.py  test_p1_recipe_errors.py  test_probe_eval_set_visibility.py  test_probe_gold_answer_leak.py  test_probe_harness_injection.py  test_probe_near_dup.py  test_probe_reward_hacking.py  test_reporting.py  test_schemas.py  test_verdict_normalization.py  test_verify_result_strict.py
