[project]
name = "bench-audit"
version = "0.1.0a0"
description = "An automated probe suite that audits agent benchmarks for contamination, gold-answer leaks, and reward hacking."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Jacob Wu", email = "jacob.jikun.wu@gmail.com" },
]
keywords = ["benchmark", "evaluation", "contamination", "reward-hacking", "agents", "auditing", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "typer>=0.12,<0.18",
    "rich>=13,<15",
    "jinja2>=3.1,<4",
    "httpx>=0.27,<0.30",
    "polars>=1.0,<2",
    "scipy>=1.13,<2",
    "numpy>=1.26,<3",
    "tenacity>=8.4,<10",
    "platformdirs>=4,<5",
]

[project.optional-dependencies]
live = [
    "inspect-ai>=0.3.50",
    "anthropic>=0.30,<1",
    "openai>=1.40,<3",
]
report = [
    "weasyprint>=62,<70",
    "markdown-it-py>=3,<4",
]
dev = [
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-asyncio>=0.23,<2",
    "pre-commit>=3.7,<5",
    "types-jinja2",
]
all = [
    "bench-audit[live,report,dev]",
]

[project.scripts]
bench-audit = "bench_audit.cli:app"

[project.urls]
Homepage = "https://github.com/jacobwu/bench-audit"
Documentation = "https://jacobwu.github.io/bench-audit"
Repository = "https://github.com/jacobwu/bench-audit"
Issues = "https://github.com/jacobwu/bench-audit/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bench_audit"]

[tool.hatch.build.targets.wheel.force-include]
"src/bench_audit/templates" = "bench_audit/templates"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["fixtures", "_reproduce_out"]

[tool.ruff.lint]
select = [
    "E", "F", "W",          # pycodestyle / pyflakes
    "I",                     # isort
    "B",                     # flake8-bugbear
    "UP",                    # pyupgrade
    "N",                     # pep8-naming
    "C4",                    # comprehensions
    "PIE",                   # flake8-pie
    "RET",                   # return
    "SIM",                   # simplify
    "PT",                    # pytest-style
    "ARG",                   # unused-arguments
    "PTH",                   # pathlib
    "RUF",
]
ignore = [
    "E501",     # handled by formatter
    "B008",     # typer uses function-call defaults
    "RUF002",   # Unicode em-dash in docstrings is intentional
    "RUF003",   # ditto, comments
    "RUF012",   # mutable default class attrs are fine for our use
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PT011"]
"docs/**" = ["E", "F"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = ["fixtures/", "_reproduce_out/", "site/", "_site/"]
# `unused-ignore` flips depending on whether optional deps (inspect-ai, weasyprint,
# datasets) are installed in the analyzing env. We tolerate the "unused" warning
# rather than removing the comments, because in CI without the [live]/[report]
# extras the comments are required.
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["weasyprint.*", "inspect_ai.*", "datasets.*", "scipy.*", "scipy", "weasyprint", "inspect_ai", "datasets"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "live: tests that require live model API keys",
    "slow: tests that take >5s",
    "docker: tests that require Docker",
]

[tool.coverage.run]
branch = true
source = ["bench_audit"]
omit = ["src/bench_audit/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
